[package]
name = "archypix_app_back"
version = "0.1.0"
edition = "2021"

[dependencies]
automod = "1.0.15"
async-trait = "0.1.88"
rocket = { version = "0.5.1", features = ["json"] }
tracing-attributes = "0.1.28"
itertools = "0.14"
tokio = "1.45"
diesel_derives = "2.1.2"
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
rand = "0.9.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
chrono = { version = "0.4.40", features = ["clock", "serde"] }
chrono-tz = { version = "0.10.0", default-features = false, features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
hex = "0.4.3"
pwhash = "1"
user-agent-parser = { version = "0.3.6", features = ["rocket"] }
enum-kinds = "0.5.1"
diesel = { version = "2.2.9", features = ["postgres", "r2d2", "chrono", "numeric", "ipnet-address"] }
lettre = { version = "0.11.15", features = ["tokio1", "tokio1-native-tls"] }
rocket_cors = "0.6.0"
tera = "1.20.0"
lazy_static = "1.5.0"
totp-rs = { version = "5.7.0", features = ["qr", "otpauth"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc"] }
# JsonSchema trait
schemars = { version = "0.8", features = ["chrono", "bigdecimal04"] }
strum = "0.27.1"
strum_macros = "0.27.1"
rexiv2 = "0.10.0"
num-rational = "0.4.2"
serde_json = "1.0.140"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.85"
aws-smithy-types = "1.3"
magick_rust = "1.0.0"
env_logger = "0.11.8"
log = "0.4"
indexmap = { version = "2.10.0", features = ["serde"] }
ipnet = "2.11.0"
serde_with = { version = "3.14.0", features = ["base64"] }
blurhash = "0.2.3"
image = "0.25.6"
